--- a/MemeMe 1.0 Reboot/Base.lproj/Main.storyboard
+++ b/MemeMe 1.0 Reboot/Base.lproj/Main.storyboard
@@ -36,7 +36,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gqI-Q3-moz">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem title="Camera" id="5eS-r4-dC3"/>
+                                    <barButtonItem title="Camera" id="5eS-r4-dC3">
+                                        <connections>
+                                            <action selector="pickCameraWithSelector:" destination="BYZ-38-t0r" id="4Pu-t5-8KN"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem title="Album" id="l6X-Mp-0bj">
                                         <connections>
                                             <action selector="pickImageWithSelector:" destination="BYZ-38-t0r" id="7C6-We-2Na"/>
