reduce pick function redundancy by making it one function

--- a/MemeMe 1.0 Reboot/Base.lproj/Main.storyboard
+++ b/MemeMe 1.0 Reboot/Base.lproj/Main.storyboard
@@ -43,13 +43,13 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="JY7-hP-ebi"/>
                                     <barButtonItem systemItem="camera" id="5eS-r4-dC3">
                                         <connections>
-                                            <action selector="pickCameraWithSelector:" destination="BYZ-38-t0r" id="4Pu-t5-8KN"/>
+                                            <action selector="pickWithSelector:" destination="BYZ-38-t0r" id="Csx-8L-UX4"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="rN7-K9-qMV"/>
                                     <barButtonItem title="Album" id="l6X-Mp-0bj">
                                         <connections>
-                                            <action selector="pickImageWithSelector:" destination="BYZ-38-t0r" id="7C6-We-2Na"/>
+                                            <action selector="pickWithSelector:" destination="BYZ-38-t0r" id="0Dn-ZO-m0f"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="wOJ-CI-KR6"/>
